===============================================================================
* v0.4
===============================================================================
- Refactor: (posX, posY) stuff uses Vec2
===============================================================================

===============================================================================
* v0.3
===============================================================================
- Peon animation: Idle, Move, Harvest, GatherGold, GatherWood
- Render selection square
- Mouse/Keyboard event handlers/structures
- Selected unit is assigned to Player
- Single unit selection with mouse
===============================================================================

===============================================================================
* v0.2
===============================================================================
- Right clicking move the grunt with the proper direction and animation
- Clamp() function in Util
- Render the right clicks
===============================================================================

===============================================================================
* v0.1
===============================================================================
- Basic unit structure
- Basic renderer implementation
- Sprite animation handling
- Sprite movement controlled by user with keyboard
===============================================================================