@@ -2,6 +2,8 @@
 * v0.4
 ===============================================================================
 - Refactor: (posX, posY) stuff uses Vec2
+- World : stub + unit declaration
+- Rename AnimDesc To SpriteDesc
 ===============================================================================
 
 ===============================================================================
